test/corpus/features.txt
==================
Feature
==================

# comment1
@tag1
Feature: Bla
  Summary spanning
  two lines

  @ag3
  Background:
    Given given
    And given2
    And docstring
      """json
      {
        "a": 123
      }
      """

  @tag4
  @tag6 @tag5
  Scenario: Bloo
    Given given
	# comment3
	When when 234
	Then then "bla"

  Scenario Outline: Blaaa
    Given given <abc> and
	When when <def> and
	Then then <ghi> etc.

	Examples:
	  | a | b |
	  | 1 | 2 |
	  | 3 | 4 |

---

(source_file
  (comment)
  (feature
    (tag)
    (feature_keyword)
    (title)
    (summary
      (summary_line)
      (summary_line)
    )
	(background
	  (tag)
	  (background_keyword)
	  (title)
	  (step
	    (step_keywords)
		(step_definition)
	  )
	  (step
	    (step_keywords)
		(step_definition)
	  )
      (step
	    (step_keywords)
		(step_definition)
		(docstring
          (docstring_start
            (docstring_lang)
          )
          (docstring_content
            (docstring_line)
            (docstring_line)
            (docstring_line)
          )
          (docstring_end)
        )
	  )
	)
	(scenario
	  (tag)
	  (tag)
	  (tag)
	  (scenario_keyword)
	  (title)
	  (step
	    (step_keywords)
		(step_definition)
	  )
	  (comment)
	  (step
	    (step_keywords)
		(step_definition
		  (number)
		)
	  )
	  (step
	    (step_keywords)
		(step_definition
		  (quoted_string)
		)
	  )
	)
	(scenario_outline
	  (scenario_outline_keyword)
	  (title)
	  (step
	    (step_keywords)
		(step_definition
		  (reference)
		)
	  )
	  (step
	    (step_keywords)
		(step_definition
		  (reference)
		)
	  )
	  (step
	    (step_keywords)
		(step_definition
		  (reference)
		)
	  )
	  (examples
	    (examples_keyword)
		(table
		  (table_header
		    (table_header_name)
		    (table_header_name)
		  )
		  (table_row
		    (table_cell)
		    (table_cell)
		  )
		  (table_row
		    (table_cell)
		    (table_cell)
		  )
		)
	  )
	)
  )
)
